# ksio

./: .gitignore  CMakeLists.txt
ksio/: io.c  io.h  logger.c  logger.h  midi.c  midi.h  string.c  string.h  types.h  vector.c  vector.h
ksio/formats/: aseprite.c  aseprite.h  midi.c  midi.h  wave.c  wave.h
ksio/serial/: binary.c  binary.h  clike.c  clike.h  deleter.c  deleter.h
tests/: CMakeLists.txt  asperite_file_test.c  io_test.c  midi_file_test.c  wav_file_test.c
tests/resources/: test.ase  test.mid
